Fixed layout bugs, changed Formik form

--- a/src/components/Users/Users.module.scss
+++ b/src/components/Users/Users.module.scss
@@ -1,5 +1,32 @@
 @import "../../styles/helpers";
 
+.avatar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  height: 60px;
+  width: 60px;
+  background: $warning;
+  font-weight: 600;
+  font-size: 18px;
+}
+
+.tableAvatar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  height: 60px;
+  width: 60px;
+  background: #FDA700;
+  font-weight: 600;
+  font-size: 18px;
+  img {
+    height: 60px
+  }
+}
+
 .promoAlert {
   transition: 0.6s;
   transition-timing-function: ease;
